--- a/index.html
+++ b/index.html
@@ -3,8 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cube Breaker 2048</title>
-    <link rel="icon" href="favicon.png">
+    <title>Cube Breaker 2048 - Legendary Classic Arcade Game</title>
+    <meta name="title" content="Cube Breaker 2048 - Legendary Classic Arcade Game">
+    <meta name="description" content="Play Cube Breaker 2048! Break cubes, bounce balls, and reach the legendary 2048. Addictive arcade fun on mobile!">
+    <meta name="keywords" content="Cube Breaker 2048, legendary classic arcade game, casual games, free mobile games, addictive games">
+    <meta name="author" content="default company tender giant">
+    <meta name="robots" content="index, follow">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Cube Breaker 2048 - Legendary Classic Arcade Game">
+    <meta property="og:description" content="Play Cube Breaker 2048! Break cubes, bounce balls, and aim for 2048. Addictive arcade fun on mobile!">
+    <meta property="og:image" content="https://cubebreaker2048.fun/images/favicon.png">
+    <meta property="og:url" content="https://cubebreaker2048.fun">
+    <link rel="canonical" href="https://cubebreaker2048.fun">
+    <link rel="icon" href="https://cubebreaker2048.fun/favicon.png" type="image/png">
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "VideoGame",
+        "name": "Cube Breaker 2048",
+        "description": "Play Cube Breaker 2048, the legendary classic arcade game! Combine cubes, aim for 2048, and enjoy endless fun on mobile.",
+        "image": "https://cubebreaker2048.fun/images/og-image.png",
+        "url": "https://cubebreaker2048.fun",
+        "applicationCategory": "ArcadeGame",
+        "operatingSystem": "iOS, Android",
+        "publisher": {
+            "@type": "Organization",
+            "name": "Default Company Tender Giant",
+            "url": "https://cubebreaker2048.fun"
+        }
+    }
+    </script>
+
     <style>
         /* Base Styles */
         html, body {
@@ -159,9 +188,9 @@
     <h1>CUBE BREAKER 2048</h1>
     <div class="container">
         <p class="description">
-            <strong>Cube Breaker 2048</strong> is a classic arcade game where players shoot and control a paddle to bounce a ball and break cubes on the screen. 
-            Some cubes have different power-ups, shapes, or sizes, adding excitement. With simple mechanics, increasing difficulty, 
-            and satisfying gameplay, Cube Breaker offers endless fun for players of all ages!
+            <strong>Cube Breaker 2048</strong> >is a thrilling classic arcade game that challenges players to shoot and maneuver a paddle to bounce a ball and shatter cubes on the screen. 
+            Each cube brings surprises, with unique power-ups, varying shapes, and sizes that keep the gameplay fresh and exciting. 
+            Featuring intuitive controls, progressively challenging levels, and endlessly satisfying mechanics, Cube Breaker 2048 delivers hours of fun for players of all ages. Jump in and see how high you can score!
         </p>
         <div class="images">
             <div >
