--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
     <h1>CUBE BREAKER 2048</h1>
     <div class="container">
         <p class="description">
-            <strong>Cube Breaker 2048</strong> >is a thrilling classic arcade game that challenges players to shoot and maneuver a paddle to bounce a ball and shatter cubes on the screen. 
+            <strong>Cube Breaker 2048</strong> is a thrilling classic arcade game that challenges players to shoot and maneuver a paddle to bounce a ball and shatter cubes on the screen. 
             Each cube brings surprises, with unique power-ups, varying shapes, and sizes that keep the gameplay fresh and exciting. 
             Featuring intuitive controls, progressively challenging levels, and endlessly satisfying mechanics, Cube Breaker 2048 delivers hours of fun for players of all ages. Jump in and see how high you can score!
         </p>
